Feat(Login): working on login page

--- a/src/app/game-header/game-header.component.html
+++ b/src/app/game-header/game-header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <div class="difficulty">{{gameDifficulty | uppercase}}</div>
+    <div class="difficulty">{{gameDifficultyValue | uppercase}}</div>
     <div class="placeholder">
         <div class="label">COMPTEUR :</div>
         <div class="value">0</div>
