--- a/src/app/game-historic/game-historic.component.html
+++ b/src/app/game-historic/game-historic.component.html
@@ -1,1 +1,5 @@
-<div class="historic"></div>
+<div class="historic">
+    <ul>
+        <li *ngFor="let message of historicList"></li>
+    </ul>
+</div>
