--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,9 @@
-<div class="game">
-    <app-game-header></app-game-header>
-    <app-game-historic></app-game-historic>
-    <app-game-input></app-game-input>
+<div class="vertical">
+    <div class="horizontal">
+        <div class="game">
+            <app-game-header></app-game-header>
+            <app-game-historic></app-game-historic>
+            <app-game-input></app-game-input>
+        </div>
+    </div>
 </div>
-<div>{{gameDifficulty}}</div>
