--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -26,6 +26,13 @@
     margin-bottom: 20px;
 }
 
+.login .error {
+    font-size: 0.9rem;
+    text-align: center;
+    padding: 0 20px 0 20px;
+    color: #D9534F;
+}
+
 .login .field {
     margin: 10px 20px 10px 20px;
 }
